--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
         <h2> All Fit: Terms of Use & Privacy Policy</h2>
         <hr width="600", align="left">
         <p style="color: gray;"> 
-            Lam Nguyen operates the website and the “Job Application Tracker” mobile application (the “Service”).
+            Lam Nguyen operates the website and the “All Fit" mobile application (the “Service”).
             <br> <br>
-            The app is made available to you on an “as in”, “with all faults and “as available” basis. I cannot guarantee that <br>
-            the app will function or maintain the same level of service in the future. 
+            The app is made available to you on an “as in”, “with all faults and “as available” basis. I cannot guarantee that the app will function or maintain the same level of service in the future. 
             <br> <br>
-            Please read this section carefully since it limits the liability of “Job Application Tracker”. By downloading <br>“Job Application Tracker”, your use of the app is at your own discretion and risk. “Job Application Tracker” <br> makes no claims or promises with respect to the quality, the accuracy or reliability of the app, its safety or security, or its content. </p>
+            Please read this section carefully since it limits the liability of “All Fit". By downloading "All Fit", your use of the app is at your own discretion and risk. “All Fit" makes no claims or promises with respect to the quality, the accuracy or reliability of the app, its safety or security, or its content. </p>
         <br>
         
         <!-- Physical Activity Notice-->
@@ -50,14 +49,19 @@
         <h2> What kind of data is stored? </h2>
         <hr width="600", align="left">
         <p style="color: gray;">
-            All data is store 100% anonymously and locally within your device.
+            All data is store 100% anonymously and locally within your device. <br>
+            <ul type="circle", style="color: gray;">
+                <li> I do not collect personal identifiable information about you. Nor do I have any third party or advertising company collect them.</li>
+                <li> You will not be asked to log in to use the services provided. </li>
+            </ul>
         </p>
         <br>
 
         <!-- Changes and Updates-->
         <h2> Changes and Updates</h2>
+        <hr width="600", align="left">
         <p style="color: gray;">
-            If “All Fit" makes changes to Terms and Conditions or Privacy Policy, these changes will be posted on this page in a timely manner and you will be notified within the app. We reserve the right to modify these terms & conditions and/or privacy policy at any time, so please review it frequently (at least on every app update).- Privacy Policy and Terms and Conditions
+            If “All Fit" makes changes to Terms and Conditions or Privacy Policy, these changes will be posted on this page in a timely manner and you will be notified within the app. We reserve the right to modify these terms & conditions and/or privacy policy at any time, so please review it frequently (at least on every app update).
         </p>
         </font>
     </body>
