--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <h2> Physical Activity Notice</h2>
         <hr width="600", align="left">
         <p style="color: gray;">
-            The App may include features that promote physical activity. Consider the risks involved and consult with your medical professional <br> 
-            before engaging in any physical activity. All Fit is not responsible or liable for any injuries or damages you may sustain that result from your use of, <br>
+            The App may include features that promote physical activity. Consider the risks involved and consult with your medical professional 
+            before engaging in any physical activity. All Fit is not responsible or liable for any injuries or damages you may sustain that result from your use of, 
             or inability to use, the features of the App. Please understand this essential clause before use.
         </p>
         <br>
