--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Introduction -->
         <h2> Introduction </h2>
         <hr width="600", align="left">
-        <p style="color: gray;"> By using "All Fit", you agree to our Terms of Use and our Privacy Policy. I invite you to fully read this page <br>
+        <p style="color: gray;"> By using "All Fit", you agree to our Terms of Use and our Privacy Policy. I invite you to fully read this page
              and make sure you understand its contents prior to using "All Fit".</p>
         <br>
 
