--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <body>
         <!--ff605f-->
         <font face="arial"> 
-        <h1 style="font-size: 40px;">Terms and Conditions </h1> 
+        <h1 style="font-size: 40px;">Privacy Policy </h1> 
         <!-- Introduction -->
         <h2> Introduction </h2>
         <hr width="600", align="left">
-        <p style="color: gray;"> By using "All Fit", you agree to our Terms of Use and our Privacy Policy. I invite you to fully read this page
-             and make sure you understand its contents prior to using "All Fit".</p>
+        <p style="color: gray;"> By using "All Fit", you agree to our Terms of Use and our Privacy Policy. I invite you to fully read this page and make sure you understand its contents prior to using "All Fit".</p>
         <br>
 
         <!-- Terms of Use & Privacy Policy-->
