--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>
-            Terms and Conditions
+            Terms and Conditions and Privacy Policy
         </title>
     </head>
     <body>
         <!--ff605f-->
         <font face="arial"> 
-        <h1 style="font-size: 40px;">Privacy Policy </h1> 
+        <h1 style="font-size: 40px;"> Terms and Conditions and Privacy Policy </h1> 
         <!-- Introduction -->
         <h2> Introduction </h2>
         <hr width="600", align="left">
@@ -55,7 +55,15 @@
             </ul>
         </p>
         <br>
-
+        
+        <!-- Copyright-->
+        <h2> Copyright </h2>
+        <hr width="600", align="left">
+        <p style="color: gray;">
+            In accessing the Website you agree that you will access the content solely for your personal, non-commercial use. None of the content may be downloaded, copied, reproduced, transmitted, stored, sold or distributed without the prior written consent of the copyright holder. This excludes the downloading, copying and/or printing of pages of the Website for personal, non-commercial home use only.
+        </p>
+        <br>
+        
         <!-- Changes and Updates-->
         <h2> Changes and Updates</h2>
         <hr width="600", align="left">
