--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
         <h2> Copyright </h2>
         <hr width="600", align="left">
         <p style="color: gray;">
+            All copyright, trade marks and all other intellectual property rights in the app and its content (including without limitation the app design, text, graphics and all software and source codes connected with the app) are owned by or licensed to All Fit or otherwise used by All Fit as permitted by law.
+            <br>
             In accessing the Website you agree that you will access the content solely for your personal, non-commercial use. None of the content may be downloaded, copied, reproduced, transmitted, stored, sold or distributed without the prior written consent of the copyright holder. This excludes the downloading, copying and/or printing of pages of the Website for personal, non-commercial home use only.
         </p>
         <br>
