--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         <p style="color: gray;">
             All data is store 100% anonymously and locally within your device. <br>
             <ul type="circle", style="color: gray;">
+                <li> I do not store or sell any personal identifiable information or data about you. Anything that is identifiable will be through Google Mail, and used only to be able to respond back and enhance your experience from my end only.
                 <li> I do not collect personal identifiable information about you. Nor do I have any third party or advertising company collect them.</li>
                 <li> You will not be asked to log in to use the services provided. </li>
+                <li> Furthermore, any suggestions or bug issue reporting will be done anonyomously through Google Form.
             </ul>
         </p>
         <br>
